want to see if this will fix IE scrollbar

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -237,3 +237,6 @@ footer{
 ::-webkit-scrollbar {
     display: none;
 }
+div {
+	-ms-overflow-style:none;
+}
